Add correction to ex13

--- a/working/L07/irreducible mass of BH.ipynb
+++ b/working/L07/irreducible mass of BH.ipynb
@@ -488,7 +488,7 @@
    "id": "39a82276-e9d3-49d3-81fd-8ace3d171af5",
    "metadata": {},
    "source": [
-    "From the plot we can observe that bandwidth=0.5 is too large and gives a wrong prediction for the pdf. The best value would be aropund 0.005 because the 0.001 is too small (we start to see noise)."
+    "From the plot we can observe that bandwidth=0.5 is too large and gives a wrong prediction for the pdf. The best value would be around 0.005 because the 0.001 is too small (we start to see noise)."
    ]
   },
   {
