--- a/working/L12/Transient Universe II.ipynb
+++ b/working/L12/Transient Universe II.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fb8d0b7b-a8e6-4bc6-bfe1-c9d5dc062af7",
    "metadata": {},
    "outputs": [],
@@ -89,13 +89,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 24\n",
     "data = np.load(\"transient.npy\")\n",
     "times = data[:, 0]\n",
     "fluxes = data[:, 1]\n",
     "e_fluxes = data[:, 2]\n",
     "\n",
     "ndim = 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b06d8d9-920e-426c-a84e-c3045c85fce3",
+   "metadata": {},
+   "source": [
+    "## Nested Sampling for the first model"
    ]
   },
   {
@@ -657,6 +664,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "366d6007-dc5e-4208-9c42-5547135d26c1",
+   "metadata": {},
+   "source": [
+    "This is the same corner plot that we obtain with emcee before."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f50323d-f4ef-45c5-82c9-8182c665b347",
+   "metadata": {},
+   "source": [
+    "## Nested Sampling for the second model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "040b9046-5771-4f94-8e35-771c38114a16",
@@ -695,6 +718,14 @@
    ],
    "source": [
     "cfig, caxes = dyplot.cornerplot(results2, show_titles = True, labels = ['A', 'b', 't_0', 'Sigma_W'], quantiles=[0.05, 0.5, 0.95])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a6b6168-98d9-4fb7-96d9-03b638cbf937",
+   "metadata": {},
+   "source": [
+    "## Evaluate the Bayes factor"
    ]
   },
   {
