Add corrections to the exercises

--- a/working/L17/Supernovae I.ipynb
+++ b/working/L17/Supernovae I.ipynb
@@ -53,6 +53,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b879d54-3fc9-4c8b-b001-049c1928bcac",
+   "metadata": {},
+   "source": [
+    "## Visualization of the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "371d8661-44ed-4723-94e5-acd74add0b7b",
@@ -96,7 +104,7 @@
    "id": "c6964d59-44da-4d43-823e-7ef3bee00cd7",
    "metadata": {},
    "source": [
-    "### Linear Regression"
+    "## Linear Regression"
    ]
   },
   {
@@ -161,7 +169,7 @@
    "id": "e5b940d3-e1ca-4f82-a0ac-4aca1606e4b3",
    "metadata": {},
    "source": [
-    "### Polynomial regression"
+    "## Polynomial regression"
    ]
   },
   {
@@ -301,7 +309,7 @@
    "id": "740947ea-d20e-4a61-b9b9-f63fd3ccba1a",
    "metadata": {},
    "source": [
-    "### k-fold Cross validation"
+    "## k-fold Cross validation"
    ]
   },
   {
@@ -432,7 +440,7 @@
    "id": "5bec244b-ca08-4c63-9e3a-26ddf91379d4",
    "metadata": {},
    "source": [
-    "### Basic Function Regression"
+    "## Basic Function Regression"
    ]
   },
   {
@@ -528,7 +536,7 @@
    "id": "3c5ccbdf-f81f-4251-a2ef-1aec44b08168",
    "metadata": {},
    "source": [
-    "### Kernel regression"
+    "## Kernel regression"
    ]
   },
   {
@@ -584,7 +592,7 @@
    "id": "2a6616d5-67ba-46b0-a6f4-386a1d9eafcf",
    "metadata": {},
    "source": [
-    "### Learning Curves"
+    "## Learning Curves"
    ]
   },
   {
@@ -742,7 +750,7 @@
    "id": "78c78e07-e32a-4c2e-bd45-43fee3728b97",
    "metadata": {},
    "source": [
-    "Th two errors converge around 40 points, so this means that we don't require a bigger sample to improve our fit.\n"
+    "The two errors converge around 40 points, so this means that we don't require a bigger sample to improve our fit.\n"
    ]
   },
   {
