--- a/working/L19/Galaxies vs QSOs.ipynb
+++ b/working/L19/Galaxies vs QSOs.ipynb
@@ -58,6 +58,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7443356-5d6f-4bc6-9589-1cf9f6f8610a",
+   "metadata": {},
+   "source": [
+    "## Data reading"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "69eed534-714a-415e-a233-1c6f69ea35b8",
@@ -665,7 +673,7 @@
    "id": "598fbac6-4bc7-4a9c-ac3c-24e8d5e1bdf2",
    "metadata": {},
    "source": [
-    "Here the result is contradictory: the highest completeness is for two feature, while the lowest contamination is for one features. Let's look to the ROC curves."
+    "Here the result is contradictory: the highest completeness is for two features, while the lowest contamination is for one feature. Let's look to the ROC curves."
    ]
   },
   {
@@ -732,7 +740,7 @@
    "id": "5ff8fd73-7652-4ca8-89f0-1f3a12051eaf",
    "metadata": {},
    "source": [
-    "## commento"
+    "Now there isn't a big difference between the roc curves, so looking to the precedent I would probabily choose one or three features."
    ]
   },
   {
