Update all finished exercises

--- a/working/L10/Cloud or sunny.ipynb
+++ b/working/L10/Cloud or sunny.ipynb
@@ -312,7 +312,7 @@
    "id": "5c737016-351a-4ef5-841e-062fe227d977",
    "metadata": {},
    "source": [
-    "We can observe that the median doesn't change until we discard 1000 as well as the interquartile range (They are rank-based statistics)."
+    "We can observe that the median doesn't change until we discard 1000 as well as the $\\sigma_G$ (They are rank-based statistics)."
    ]
   },
   {
