--- a/working/L17/Supernovae I.ipynb
+++ b/working/L17/Supernovae I.ipynb
@@ -23,10 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4e2316d0-73d5-48e8-bdcf-fb883bd7acaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ISAFA\\anaconda3\\Lib\\site-packages\\astroML\\linear_model\\linear_regression_errors.py:10: UserWarning: LinearRegressionwithErrors requires PyMC3 to be installed\n",
+      "  warnings.warn('LinearRegressionwithErrors requires PyMC3 to be installed')\n"
+     ]
+    }
+   ],
    "source": [
     "from astroML.datasets import generate_mu_z\n",
     "import numpy as np\n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "371d8661-44ed-4723-94e5-acd74add0b7b",
    "metadata": {},
    "outputs": [
@@ -63,7 +72,7 @@
        "Text(0.5, 1.0, 'Supernovae dataset')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a56eddae-dd92-4f30-8d60-f2cead4d7466",
    "metadata": {},
    "outputs": [
@@ -114,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1cf4372a5d0>"
+       "<matplotlib.legend.Legend at 0x1de57fc5210>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b47cf75e-9946-4c62-9ae9-877a27410e5c",
    "metadata": {},
    "outputs": [
@@ -193,7 +202,7 @@
        "(30.0, 50.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,7 +218,6 @@
     }
    ],
    "source": [
-    "#Fit 3rd degree polynomial\n",
     "Xgrid = np.linspace(0, 2.0, 100)\n",
     "Xpoint=Xgrid[:, np.newaxis]\n",
     "\n",
@@ -302,6 +310,14 @@
    "source": [
     "## k-fold Cross validation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e7b92ba-6d36-4015-a853-21fe90399920",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
